@@ -1,3 +1,10 @@
+2000-03-25  Jonathan Gapen  <jagapen@whitewater.chem.wisc.edu>
+
+	* Source/NSUser.m: Added new MacOS X function,
+	NSSearchPathForDirectoriesInDomains()
+	* Headers/gnustep/base/NSPathUtilities.h: Added prototype and
+	argument definitions for the above function.
+
 2000-03-23  Adam Fedor  <fedor@gnu.org>
 
 	* Source/....m: include config.h
